kustomize/app_c/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aap-c
  labels:
    app: app-c
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-c
      version: v1
  template:
    metadata:
      labels:
        app: app-c
        version: v1
    spec:
      containers:
        - name: app-c
          image: APP_IMAGE_URL
          ports:
            - containerPort: 80
