kustomize/app_c/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-c
spec:
  ports:
    - name: svc
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: app-c
  type: ClusterIP
