kustomize/app_c/isito-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-c
spec:
  hosts:
  - c.default.svc.cluster.local
  http:
  - match:
    - headers:
        version:
          exact: "v1"
    route:
    - destination:
        host: c.default.svc.cluster.local
        subset: v1
  - match:
    - headers:
        version:
          exact: "v2"
    route:
    - destination:
        host: c.default.svc.cluster.local
        subset: v2
